<resources>
    <string name="app_name">ZeroDegrees</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
<string name="location">Columbus</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Welcome</string>

    <!-- Strings related to login -->
    <string name="login_prompt_name">Name</string>
    <string name="login_prompt_home">Home ZipCode</string>
    <string name="login_prompt_temperature">Your Comfort Temperature</string>
    <string name="action_sign_up">Let\'s Get Started</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_login2">Welcome</string>

    <!-- Strings related to Location -->
    <string name="no_location_detected">No Location was detected. Check your device\'s location settings or provide permission to use your location.</string>
    <string name="forecast_app_id">72e5e9213d3580981ef1c5fa361626db</string>

    <string name="comfort">+2</string>
    <string name="temp">200˚</string>
    <string name="precip">30%</string>
    <string name="wind">60mph</string>
    <string name="visibility">60ft</string>

    <!-- Weather Icons -->
    <string name="weather_clear_day">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>
    <string name="weather_partly_cloudy_day">&#xf002;</string>
    <string name="weather_partly_cloudy_night">&#xf086;</string>
    <string name="weather_wind">&#xf021;</string>
    <string name="weather_fog">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rain">&#xf019;</string>
    <string name="weather_snow">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>

    <string name="weather_icon_wind">&#xf050;</string>
    <string name="weather_icon_precip">&#xf04e;</string>
    <string name="weather_icon_visibility">&#xf095;</string>

    <string name="add_location_hint">Enter Zipcode</string>

</resources>
